# parallel_programming_course

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .hadolint.yaml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .travis.yml  .yamllint  CMakeLists.txt  Doxyfile  LICENSE  README.md  appveyor.yml  build.sh  codecov.yml  requirements.txt  run.bat  run.sh  setup.cfg  valgrind.supp
1stsamples/mpi/: CMakeLists.txt  main.cpp
1stsamples/mpi_boost/: CMakeLists.txt  main.cpp
1stsamples/tbb/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  Makefile  README.md  build.md  conf.py  download.md  download.rst  environment.md  environment.rst  index.rst  make.bat  requirements.txt  submit_work.md
docs/_static/: custom.css
docs/_templates/: footer.html  layout.html
docs/common_information/: introduction.rst  points.rst  processes_tasks.rst  report.rst  threading_tasks.rst
docs/common_information/md/: introduction.md  points.md  processes_tasks.md  report.md  threading_tasks.md
docs/user_guide/: api.rst  build.rst  ci.rst  environment.rst  environment_variables.rst  submit_work.rst
first_samples/mpi_boost/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt  core_tests.cpp  task.cpp  task.hpp
modules/core/include/: perf.hpp  task.hpp
modules/core/src/: perf.cpp  task.cpp
modules/core/tests/: core_tests.cpp  test_task.hpp
modules/core/util/: util.hpp
modules/performance/include/: performance.hpp
modules/performance/tests/: .clang-tidy  perf_tests.cpp
modules/ref/: CMakeLists.txt
modules/reference/: CMakeLists.txt
modules/reference/average_of_vector_elements/: CMakeLists.txt  ref_task.hpp  ref_tests.cpp
modules/reference/max_of_vector_elements/: ref_task.hpp  ref_tests.cpp
modules/reference/min_of_vector_elements/: ref_task.hpp  ref_tests.cpp
modules/reference/most_different_neighbor_elements/: ref_task.hpp  ref_tests.cpp
modules/reference/nearest_neighbor_elements/: CMakeLists.txt  ref_task.hpp  ref_tests.cpp
modules/reference/num_of_alternations_signs/: ref_task.hpp  ref_tests.cpp
modules/reference/num_of_orderly_violations/: ref_task.hpp  ref_tests.cpp
modules/reference/sum_of_vector_elements/: CMakeLists.txt  ref_task.hpp  ref_tests.cpp
modules/reference/sum_values_by_rows_matrix/: ref_task.hpp  ref_tests.cpp
modules/reference/vector_dot_product/: ref_task.hpp  ref_tests.cpp
modules/reports/: CMakeLists.txt
modules/runners/include/: runners.hpp
modules/runners/src/: runners.cpp
modules/runners/tests/: runners_additional.cpp  test_runners.cpp
modules/task/include/: task.hpp
modules/task/tests/: .clang-tidy  task_additional.cpp  task_tests.cpp
modules/task_1/: CMakeLists.txt
modules/task_1/aglikov_i_shell_sort_omp/: CMakeLists.txt  main.cpp
modules/task_1/batova_d_qsort_merge_dac_omp/: CMakeLists.txt  main.cpp
modules/task_1/bederdinov_d_quicksort_betcher_omp/: CMakeLists.txt  main.cpp
modules/task_1/bogatova_m_dijkstra_alg_omp/: CMakeLists.txt  main.cpp
modules/task_1/chernenko_v_linear_filtering_omp/: CMakeLists.txt  main.cpp
modules/task_1/churakov_s_jarvis_march_omp/: CMakeLists.txt  main.cpp
modules/task_1/dubovskoy_a_radix_dac_omp/: CMakeLists.txt  main.cpp
modules/task_1/ermachenko_b_filtr_gauss_block_omp/: CMakeLists.txt  main.cpp
modules/task_1/gladyshev_a_gauss_omp/: CMakeLists.txt  main.cpp
modules/task_1/grishin_a_crs_matrix_omp/: CMakeLists.txt  main.cpp
modules/task_1/kaganov_d_radixSortMerge_omp/: CMakeLists.txt  main.cpp
modules/task_1/kamelina_j_matrix_mul_ccs_omp/: CMakeLists.txt  main.cpp
modules/task_1/kasmazyuk_n_alg_cannon_omp/: CMakeLists.txt  main.cpp
modules/task_1/khomenko_a_shell_sort_w_simple_merge_omp/: CMakeLists.txt  main.cpp
modules/task_1/kiselev_d_monte_carlo_omp/: CMakeLists.txt  main.cpp
modules/task_1/konakov_a_blurring_omp/: CMakeLists.txt  main.cpp
modules/task_1/krasikova_e_cannon_omp/: CMakeLists.txt  main.cpp
modules/task_1/kudalin_r_qsort_dac_merge_omp/: CMakeLists.txt  main.cpp
modules/task_1/kudrin_m_shell_batcher_omp/: CMakeLists.txt  main.cpp
modules/task_1/kutovoi_v_rectangle_integr_omp/: CMakeLists.txt  main.cpp
modules/task_1/kuznetsov_k_radix_sort_dac_omp/: CMakeLists.txt  main.cpp
modules/task_1/lalykin_o_radix_batcher_omp/: CMakeLists.txt  main.cpp
modules/task_1/lobanov_a_radix_w_batcher_omp/: CMakeLists.txt  main.cpp
modules/task_1/mezina_m_Moore_algorithm_omp/: CMakeLists.txt  main.cpp
modules/task_1/muravev_d_hoar_sort_simple_merge_omp/: CMakeLists.txt  main.cpp
modules/task_1/nifadyev_v_quicksort_simple_merge_omp/: CMakeLists.txt  main.cpp
modules/task_1/panova_e_conj_gradient_omp/: CMakeLists.txt  main.cpp
modules/task_1/ponomarev_a_linear_filter_omp/: CMakeLists.txt  main.cpp
modules/task_1/pozdeeva_v_matrix_mult_omp/: CMakeLists.txt  main.cpp
modules/task_1/romanov_a_multidim_mc_omp/: CMakeLists.txt  main.cpp
modules/task_1/senina_a_matrix_mul_ccs_omp/: CMakeLists.txt  main.cpp
modules/task_1/sharov_i_multiMatCRSComplex_omp/: CMakeLists.txt  main.cpp
modules/task_2/: CMakeLists.txt
modules/task_3/: CMakeLists.txt
modules/task_4/: CMakeLists.txt
modules/test_tasks/: CMakeLists.txt
scripts/: run.sh  (+29 more)
tasks/: CMakeLists.txt
tasks-1/: CMakeLists.txt
tasks-1/example/: CMakeLists.txt
tasks/all/: runner.cpp
tasks/example/: CMakeLists.txt  info.json  report.md  settings.json
tasks/example_processes/: CMakeLists.txt  info.json  settings.json
tasks/example_processes_2/: info.json
tasks/example_processes_3/: info.json
tasks/example_threads/: CMakeLists.txt  info.json  settings.json
tasks/examples/: CMakeLists.txt
tasks/mpi/: CMakeLists.txt  runner.cpp
tasks/nazyrov_a_a_vector_avg/: info.json  report.md  settings.json
tasks/omp/: CMakeLists.txt
tasks/runners/: functional.cpp  performance.cpp
tasks/seq/: CMakeLists.txt
tasks/std/: CMakeLists.txt
tasks/stl/: CMakeLists.txt
tasks/task_2/: CMakeLists.txt
tasks/task_3/: CMakeLists.txt
tasks/tbb/: CMakeLists.txt  runner.cpp
tasks/test_tasks/: CMakeLists.txt
(+559 files in other folders)
