message(STATUS "Student's tasks")

set(list_of_reverts "")

SUBDIRLIST(subdirs ${CMAKE_CURRENT_LIST_DIR})
foreach(subd ${subdirs})
    add_subdirectory(${subd})
    foreach (dir_type "all" "mpi" "omp" "seq" "stl" "tbb")
        set(base_dir "${CMAKE_CURRENT_SOURCE_DIR}/${subd}/${dir_type}_disabled")
        if (NOT EXISTS "${base_dir}")
            continue()
        else ()
            list(APPEND list_of_reverts "${subd}_${dir_type}")
        endif ()
    endforeach ()
endforeach()

set(output_file "${CMAKE_BINARY_DIR}/revert-list.txt")
file(WRITE ${output_file} "${CONTENT}")
message(STATUS "revert list")
foreach (dir_name ${list_of_reverts})
    message(STATUS "-- ${dir_name}")
    file(APPEND ${output_file} "${dir_name}\n")
endforeach()

add_compile_definitions(PATH_TO_PPC_PROJECT="${CMAKE_SOURCE_DIR}")
