message(STATUS "Task 1")

add_subdirectory(lalykin_o_radix_batcher_omp)
add_subdirectory(kutovoi_v_rectangle_integr_omp)
add_subdirectory(khomenko_a_shell_sort_w_simple_merge_omp)
add_subdirectory(gladyshev_a_gauss_omp)
add_subdirectory(zinoviev_v_shtrassen_mul_omp)
add_subdirectory(nifadyev_v_quicksort_simple_merge_omp)
add_subdirectory(bederdinov_d_quicksort_betcher_omp)
add_subdirectory(krasikova_e_cannon_omp)
add_subdirectory(grishin_a_crs_matrix_omp)
add_subdirectory(vorobev_p_graham_alg_omp)
