message(STATUS "Task 1")

add_subdirectory(muravev_d_hoar_sort_simple_merge_omp)
add_subdirectory(lalykin_o_radix_batcher_omp)
add_subdirectory(kutovoi_v_rectangle_integr_omp)
add_subdirectory(khomenko_a_shell_sort_w_simple_merge_omp)
add_subdirectory(gladyshev_a_gauss_omp)
add_subdirectory(zinoviev_v_shtrassen_mul_omp)
add_subdirectory(nifadyev_v_quicksort_simple_merge_omp)
add_subdirectory(bederdinov_d_quicksort_betcher_omp)
add_subdirectory(krasikova_e_cannon_omp)
add_subdirectory(grishin_a_crs_matrix_omp)
add_subdirectory(vorobev_p_graham_alg_omp)
add_subdirectory(kamelina_j_matrix_mul_ccs_omp)
add_subdirectory(panova_e_conj_gradient_omp)
add_subdirectory(romanov_a_multidim_mc_omp)
add_subdirectory(pozdeeva_v_matrix_mult_omp)
add_subdirectory(chernenko_v_linear_filtering_omp)
add_subdirectory(kiselev_d_monte_carlo_omp)
add_subdirectory(sharov_i_multiMatCRSComplex_omp)
add_subdirectory(ermachenko_b_filtr_gauss_block_omp)
add_subdirectory(bogatova_m_dijkstra_alg_omp)
add_subdirectory(mezina_m_Moore_algorithm_omp)
add_subdirectory(usova_m_qsort_with_odd_even_merge_omp)
add_subdirectory(kudalin_r_qsort_dac_merge_omp)
