message(STATUS "Task 2")

add_subdirectory(khomenko_a_shell_sort_w_simple_merge_task2_omp)
add_subdirectory(gladyshev_a_gauss_block_omp)
add_subdirectory(grishin_a_crs_matrix_task2_omp)
add_subdirectory(lalykin_o_radix_batcher_task2_omp)
add_subdirectory(bederdinov_d_quicksort_batcher_task2_omp)
add_subdirectory(romanov_a_multidim_mc_task_2_omp)
add_subdirectory(panova_e_conj_gradient_task2_omp)
add_subdirectory(krasikova_e_cannon_task2_omp)

